trying to fix the overflow on the search page

--- a/themes/coderoad/sass/_search.scss
+++ b/themes/coderoad/sass/_search.scss
@@ -1,5 +1,4 @@
 .search {
-  height: 100%;
   .entry-title {
     display: block;
   }
