--- a/themes/coderoad/style.css
+++ b/themes/coderoad/style.css
@@ -3103,53 +3103,59 @@ article {
       height: 300px;
       display: unset; } }
 
-.search {
-  height: 100%; }
-  .search .entry-title {
-    display: block; }
-  .search .site-content {
-    height: 100vh;
-    max-width: 1120px;
-    margin: 0 auto;
-    padding: 0 auto; }
-  .search .search-content h1 {
-    font-family: "Space Mono";
-    text-align: center;
-    font-size: 32px;
-    padding: 2em; }
-    .search .search-content h1 span {
-      font-size: 25px;
-      text-transform: uppercase;
-      color: #157c99; }
-    @media screen and (min-width: 1000px) {
-      .search .search-content h1 {
-        padding-top: 1em;
-        padding-bottom: 2em;
-        font-size: 40px; } }
-  .search .search-content h2 {
-    text-align: center;
-    font-family: "Montserrat";
-    font-size: 25px; }
-    @media screen and (min-width: 1000px) {
-      .search .search-content h2 {
-        padding: 0;
-        text-align: center; } }
-  .search .search-content a {
-    color: #22b4de; }
-  .search .search-content p {
-    font-size: 16px;
-    padding: 3em;
-    font-family: "Montserrat"; }
-    @media screen and (min-width: 1000px) {
-      .search .search-content p {
-        padding: 0 5em;
-        margin: 0;
-        font-size: 20px; } }
-  .search article {
-    padding: 0;
-    margin: 0; }
-  .search .entry-header {
-    padding: 0;
-    margin: 0; }
-  .search form {
-    display: none; }
+.search .entry-title {
+  display: block; }
+
+.search .site-content {
+  height: 100vh;
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 auto; }
+
+.search .search-content h1 {
+  font-family: "Space Mono";
+  text-align: center;
+  font-size: 32px;
+  padding: 2em; }
+  .search .search-content h1 span {
+    font-size: 25px;
+    text-transform: uppercase;
+    color: #157c99; }
+  @media screen and (min-width: 1000px) {
+    .search .search-content h1 {
+      padding-top: 1em;
+      padding-bottom: 2em;
+      font-size: 40px; } }
+
+.search .search-content h2 {
+  text-align: center;
+  font-family: "Montserrat";
+  font-size: 25px; }
+  @media screen and (min-width: 1000px) {
+    .search .search-content h2 {
+      padding: 0;
+      text-align: center; } }
+
+.search .search-content a {
+  color: #22b4de; }
+
+.search .search-content p {
+  font-size: 16px;
+  padding: 3em;
+  font-family: "Montserrat"; }
+  @media screen and (min-width: 1000px) {
+    .search .search-content p {
+      padding: 0 5em;
+      margin: 0;
+      font-size: 20px; } }
+
+.search article {
+  padding: 0;
+  margin: 0; }
+
+.search .entry-header {
+  padding: 0;
+  margin: 0; }
+
+.search form {
+  display: none; }
